fixed alignment of the texts in ingenius landing section

--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ background-size: cover;
 }
 @media only screen and (min-width:1440px){
   #home-ig-div{
-    margin-top: 70px;
+    margin-top: 50px;
   }
   #ggh-logo{
     height: 300px;
